--- a/src/components/calls/locale/en.json
+++ b/src/components/calls/locale/en.json
@@ -4,7 +4,10 @@
         "OUTGOING_CALL": "Outgoing Call",
         "REJECT": "DECLINE",
         "ACCEPT": "ACCEPT",
+        "DECLINE": "DECLINE",
         "OK": "OK",
-        "NAME_IS_CALLING": "{{callerName}} is calling"
+        "CANCEL": "Cancel",
+        "NAME_IS_CALLING": "{{callerName}} is calling...",
+        "CALLING_NAME": "Calling {{calleeName}}"
     }
 }
