--- a/src/locale/locale-en.json
+++ b/src/locale/locale-en.json
@@ -84,5 +84,12 @@
         "DONE"           : "Done",
         "USER_EMAIL"     : "email: {{userEmail}}",
         "USER_ID"        : "uid: {{userId}}"
+    },
+    "ZNK_LESSON":{
+        "START_LESSON":  "Start Lesson",
+        "END_LESSON": "End Lesson",
+        "LESSON_SUBJECT": "Lesson Subject",
+        "MATH": "math",
+        "ENGLISH": "english"
     }
 }
