--- a/src/locale/locale-en.json
+++ b/src/locale/locale-en.json
@@ -90,6 +90,7 @@
         "END_LESSON": "End Lesson",
         "LESSON_SUBJECT": "Lesson Subject",
         "MATH": "math",
-        "ENGLISH": "english"
+        "ENGLISH": "english",
+        "HAVE_ACTIVE_LESSON": "You have active lesson"
     }
 }
