labels added to modal inputs

--- a/src/locale/locale-en.json
+++ b/src/locale/locale-en.json
@@ -84,7 +84,7 @@
         "DONE"           : "Done",
         "USER_EMAIL"     : "email: {{userEmail}}",
         "USER_ID"        : "uid: {{userId}}",
-        "MESSAGE_LABEL"  : "message:",
-        "EMAIL_LABEL"    : "email:"
+        "MESSAGE_LABEL"  : "message",
+        "EMAIL_LABEL"    : "email"
     }
 }
