--- a/src/locale/locale-en.json
+++ b/src/locale/locale-en.json
@@ -102,6 +102,9 @@
         "YOUR_ASSIGNMENT_IS_LATE": "Your assignment is late"
     },
     "ZNK_CATEGORY_SUMMARY":{
-        "MASTERY": "mastery"
+        "MASTERY": "mastery",
+        "CATEGORY_MASTERY": "{{categoryProgress}}% accuracy",
+        "AVERAGE_TIME_CATEGORY": "Avg.: {{avgTime}} sec",
+        "SHOW_DETAILS": "Show details"
     }
 }
